Landing page with dissertation

--- a/templates/index.html
+++ b/templates/index.html
@@ -40,15 +40,17 @@
 
     <h4> Other links </h4>
     <ul>
-      <li>
-      <a href="{{urls.main.github}}" target="_blank" >Github for this app</a>
-      </li>
         <li>
           <a href="http://www.linkedin.com/in/jkedmiston" target="_blank">JE's LinkedIn page</a>
         </li>
-        
-</ul>      
-<!--    <a href="{{url_for('main_bp.download_cv')}}" class="btn btn-info btn-block">Download resume</a> -->
+        <li>
+	  <a href="{{url_for('main_bp.download_cv')}}" target="_blank">Download resume</a>
+        </li>
+        <li>
+  	  <a href="{{url_for('main_bp.download_dissertation')}}" target="_blank">Download dissertation</a>
+        </li>
+    </ul>      
+<!--    
     
   </div>
 
