--- a/templates/index.html
+++ b/templates/index.html
@@ -56,7 +56,7 @@
                     </a>
                     <div class="media-body">
                         <h4 class="media-heading"><a href="{{ url_for('main_bp.mechanics') }}">Simulations</a></h4>
-                        <p><strong>[Example: Parallel simulation codes developed to model material plasticity and lattice deformation in scientific computing.]</strong></p>
+                        <p><strong>[Example: Parallel simulation codes developed to model material elasticity, plasticity, and fracture.]</strong></p>
                         <p>
                           <span class="label label-primary">Python</span>
                             <span class="label label-primary">C++</span>        
